[project]
name = "token_picker"
version = "0.1.0"
description = "token_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
token_picker = "token_picker.main:run"
run_crew = "token_picker.main:run"
train = "token_picker.main:train"
replay = "token_picker.main:replay"
test = "token_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
